overflow fix

--- a/src/styles/main-style.css
+++ b/src/styles/main-style.css
@@ -184,7 +184,7 @@
     border-radius: 5px;
     padding: 25px;
     gap: 5px;
-    overflow: scroll;
+    overflow: auto;
   }
 
   .dice-result {
